WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54975
On Mac OS X, English contractions are marked misspelled with certain user preference setting.
https://bugs.webkit.org/show_bug.cgi?id=54975
Summary
On Mac OS X, English contractions are marked misspelled with certain user pre...
Jia Pu
Reported
2011-02-22 10:55:38 PST
On Mac OS X, when both "Spelling and Grammar->Correct Spelling Automatically" and "Substitutions->Text Replacement" are unchecked, english contractions, such as "wasn't", are marked as misspelled. <
rdar://problem/8937935
>
Attachments
Proposed patch (v1)
(3.29 KB, patch)
2011-02-22 11:27 PST
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2011-02-22 11:27:33 PST
Created
attachment 83350
[details]
Proposed patch (v1)
WebKit Commit Bot
Comment 2
2011-02-22 23:07:04 PST
Comment on
attachment 83350
[details]
Proposed patch (v1) Clearing flags on attachment: 83350 Committed
r79411
: <
http://trac.webkit.org/changeset/79411
>
WebKit Commit Bot
Comment 3
2011-02-22 23:07:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug